--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,7 +12,9 @@ jobs:
       - name: Install faker
         run: composer require fakerphp/faker
       - name: Run chromedriver
-        run: nohup $CHROMEWEBDRIVER/chromedriver --url-base=/wd/hub /dev/null 2>&1 &
+        run: export DISPLAY=:99
+          chromedriver --headless --no-sandbox --disable-dev-shm-usage --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
       - name: Install Rest
         run: composer require --dev codeception/module-rest
       - name: Run tests
