--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -13,5 +13,8 @@ modules:
             port: 9515
             browser: chrome
             window_size: maximize
+            capabilities:
+                goog:chromeOptions:
+                        args: [ "--headless --no-sandbox --disable-dev-shm-usage" ]
         - \Helper\Acceptance
 step_decorators: ~        
