--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Install faker
         run: composer require fakerphp/faker
       - name: Run chromedriver
-        run: export DISPLAY=:99
+        run: 
+          export DISPLAY=:99
           chromedriver --headless --no-sandbox --disable-dev-shm-usage --url-base=/wd/hub &
           sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
       - name: Install Rest
