--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -13,6 +13,9 @@ modules:
             port: 9515
             browser: chrome
             window_size: maximize
+            request_timeout: 120
+            connection_timeout: 120
+            pageload_timeout: 60
             capabilities:
                 goog:chromeOptions:
                         args: [ "--headless --no-sandbox --disable-dev-shm-usage" ]
