--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -18,6 +18,6 @@ modules:
             pageload_timeout: 60
             capabilities:
                 goog:chromeOptions:
-                        args: [ "--headless --no-sandbox --disable-dev-shm-usage" ]
+                         args: [ "--headless", "--disable-gpu" ]
         - \Helper\Acceptance
 step_decorators: ~        
