--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,6 +20,11 @@ jobs:
         run: composer require --dev codeception/module-rest
       - name: Run tests
         run: php vendor/bin/codecept run --steps -vvv --xml
+      - name: JUnit Report Action
+        if: always()
+        uses: mikepenz/action-junit-report@v2.4.2
+        with:
+          report_paths: 'tests/_output/report.xml'
       
 
 
