--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -9,15 +9,16 @@ modules:
     enabled:
         - WebDriver:
             url: https://habr.com/ru/
-            host: localhost
+            host: 'chrome.onnetwork.url'
             port: 9515
             browser: chrome
-            window_size: maximize
-            request_timeout: 120
-            connection_timeout: 120
-            pageload_timeout: 60
+            window_size: false
+            restart: true
+            pageload_timeout: 15
+            wait: 15
             capabilities:
-                goog:chromeOptions:
-                         args: [ "--headless", "--disable-gpu" ]
+                chromeOptions:
+                    args: ["--headless", "--no-sandbox", "--disable-gpu", "window-size=1920x1080"]
+                    binary: "/usr/bin/chromium"
         - \Helper\Acceptance
 step_decorators: ~        
