--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -9,16 +9,15 @@ modules:
     enabled:
         - WebDriver:
             url: https://habr.com/ru/
-            host: 'chrome.onnetwork.url'
+            host: localhost
             port: 9515
             browser: chrome
-            window_size: false
-            restart: true
-            pageload_timeout: 15
-            wait: 15
+            window_size: maximize
+            request_timeout: 120
+            connection_timeout: 120
+            pageload_timeout: 60
             capabilities:
-                chromeOptions:
-                    args: ["--headless", "--no-sandbox", "--disable-gpu", "window-size=1920x1080"]
-                    binary: "/usr/bin/chromium"
+                goog:chromeOptions:
+                         args: [ "--headless", "--disable-gpu" ]
         - \Helper\Acceptance
 step_decorators: ~        
