--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -8,16 +8,18 @@ actor: AcceptanceTester
 modules:
     enabled:
         - WebDriver:
-            url: https://habr.com/ru/
+    config:
+        WebDriver:
+            url: 'https://habr.com/ru/'
             host: localhost
             port: 9515
             browser: chrome
-            window_size: maximize
+            window_size: 1280x800
             request_timeout: 120
             connection_timeout: 120
             pageload_timeout: 60
             capabilities:
                 goog:chromeOptions:
-                         args: [ "--headless", "--disable-gpu" ]
+                         args: [ "--headless", "--disable-gpu" ]    
         - \Helper\Acceptance
 step_decorators: ~        
