--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -7,7 +7,8 @@
 actor: AcceptanceTester
 modules:
     enabled:
-        - WebDriver:
+        - WebDriver
+        - Asserts
     config:
         WebDriver:
             url: 'https://habr.com/ru/'
