--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -23,5 +23,5 @@ modules:
             pageload_timeout: 60
             capabilities:
                 goog:chromeOptions:
-                        args: [ "--headless", "--disable-gpu" ]    
+                        args: [ "--headless --no-sandbox --disable-dev-shm-usage" ]    
 step_decorators: ~        
