--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Run chromedriver
         run: 
           export DISPLAY=:99
-          chromedriver --headless --no-sandbox --disable-dev-shm-usage --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+          chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
       - name: Install Rest
         run: composer require --dev codeception/module-rest
       - name: Run tests
