--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,6 +7,7 @@ jobs:
     steps: 
       - uses: actions/checkout@v2
       - uses: nanasess/setup-php@master
+      - uses: nanasess/setup-chromedriver@master
       - name: Install dependecies
         run: composer install
       - name: Install Webdriver
