--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs: 
   buildAndTest:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps: 
       - uses: actions/checkout@v2
       - uses: nanasess/setup-php@master
@@ -16,9 +16,7 @@ jobs:
         run: composer require fakerphp/faker
       - name: Run chromedriver
         run: 
-          export DISPLAY=:99
-          chromedriver --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+           chromedriver --url-base=/wd/hub &
       - name: Install Rest
         run: composer require --dev codeception/module-rest
       - name: Run tests
