--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs: 
   buildAndTest:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
       - uses: nanasess/setup-php@master
@@ -15,8 +15,10 @@ jobs:
       - name: Install faker
         run: composer require fakerphp/faker
       - name: Run chromedriver
-        run: 
-           chromedriver --url-base=/wd/hub &
+        run: |
+          export DISPLAY=:99
+          chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
       - name: Install Rest
         run: composer require --dev codeception/module-rest
       - name: Run tests
